--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -642,6 +642,56 @@ For non-matched trials, there was no significant effect. Idneity (\(F(1, 44) = 1
 
 In experiment 4, we manipulated the task so that the moral valence (experiment 4a) or the self-relatedness (experiment 4b) become irrelevant to the task. We found a robust effect of the task: when the self-relatedness is task related, the results showed a strong effect of self-relatedness; in contrast, when moral valence become task related the main effect of moral valence was strong. However, the task irrelevant stimuli in the shape exerted influence on the performance as well. The good self conditions (the shape associated the self and with a \enquote{good person} within the shape) performed better than bad self conditions. These results demonstrated that even when the moral valence and self-reference was separated by the task, participants can still couple the the self with the morally good, and facilitated the perceptual decision making.
 
+\hypertarget{experiment-5a-eeg-study-1}{%
+\section{Experiment 5a: EEG study 1}\label{experiment-5a-eeg-study-1}}
+
+Experiment 5a was conducted to study the neural correlates of the positive prioritization effect. The behavioral paradigm is same as experiment 2.
+
+\hypertarget{method-6}{%
+\subsection{Method}\label{method-6}}
+
+\hypertarget{participants-8}{%
+\subsubsection{Participants}\label{participants-8}}
+
+25 college students (8 female, age = 22.72 \(\pm\) 2.84) participated the current study, all of them were from Tsinghua Universtiy in 2014. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. No participant was excluded from behavioral analysis.
+
+\hypertarget{experimental-design-2}{%
+\subsubsection{Experimental design}\label{experimental-design-2}}
+
+The experimental design of this experiment is same as experiment 2: a 3 × 2 within-subject design with moral valence (good, neutral and bad associations) and matchness between shape and label (match vs.~mismatch for the personal association) as within-subject variables.
+
+\hypertarget{stimuli-3}{%
+\subsubsection{Stimuli}\label{stimuli-3}}
+
+Three geometric shapes (triangle, square and circle, each 4.6º × 4.6º of visual angle) were presented at the center of screen for 50 ms after 500ms of fixation (0.8º × 0.8º of visual angle). The association of the three shapes to bad person (\enquote{坏人, HuaiRen}), good person (\enquote{好人, HaoRen}) or ordinary person (\enquote{常人, ChangRen}) was counterbalanced across participants. The words bad person, good person or ordinary person (3.6º × 1.6º) was also displayed at the center fo the screen. Participants had to judge whether the pairings of label and shape matched (e.g., Does the circle represent a bad person?). The experiment was run on a PC using E-prime software (version 2.0). These stimuli were displayed on a 22-in CRT monitor (1024×768 at 100Hz).
+We used backward masking to avoid over-processing of the moral words, in which a scrabmled picture were presented for 900 ms after the label. Also, to avoid the celling effect on accruacy, shapes were presented on a noisy background based on our pilot studies. The noisy images were made by scrambling a picutre of 3/4gray and ¼ white at resoluation of 2 × 2 pixel.
+
+\hypertarget{procedure-8}{%
+\subsubsection{Procedure}\label{procedure-8}}
+
+The procedure was similar to Experiment 2. Participants finished 6 blocks of trial, each with 180 trials. In total, participants finished 180 trials for each combination of condition.
+
+As in experiment 2 (Sui, He, \& Humphreys, 2012), subjects first learned the associations between labels and shapes and then completed a shape-label matching task (e.g., good person-triangle). In each trial of the matching task, a fixation were first presented for 500 ms, followed by a 50 ms label; then, a scramled picture presented 900 ms. After the backward mask, the shape were presented on a noisy background for 50ms. Participant have to response in 1000ms after the presentation of the shape, and finnally, a feedback screen was presented for 500 ms (see figure 1). The inter-trial interval (ITI) were randomly varied at the range of 1000 \textasciitilde{} 1400 ms.
+
+All the stimuli were presented on a gray background (RGB: 127, 127, 127). E-primed 2.0 was used to present stimuli and collect behavioral results. Data were collected and analyzed when accuracy performance in total reached 60\%.
+
+\hypertarget{results-8}{%
+\subsection{Results}\label{results-8}}
+
+Only the behavioral results were reported here.
+
+\hypertarget{d-prime-1}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-1}}
+
+We conducted repeated measures ANOVA, with moral valence as independent variable. The results revealed the main effect of valence (\(F(1.73, 41.45) = 4.63\), \(\mathit{MSE} = 0.10\), \(p = .019\), \(\hat{\eta}^2_G = .025\)). Post-hoc anlaysis revealed that shapes link with Good person (mean = 3.13, SE = 0.109) is greater than Neutral condition (mean = 2.88, SE = 0.14),\emph{t} = 2.916, \emph{df} = 24, \emph{p} = 0.02, p-value adjusted by Tukey method, but the \emph{d} prime between Good and bad (mean = 3.03, SE = 0.142) (\emph{t} = 1.512, \emph{df} = 24, \emph{p} = 0.3034, p-value adjusted by Tukey method), bad and neutral (\emph{t} = 1.599, \emph{df} = 24, \emph{p} = 0.2655, p-value adjusted by Tukey method) were not siginificant.
+
+\hypertarget{analaysis-of-reaction-time.-5}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-5}}
+
+The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
+
+We found intercation between Matchness and Valence (\(F(1.96, 47.14) = 21.88\), \(\mathit{MSE} = 434.43\), \(p < .001\), \(\hat{\eta}^2_G = .021\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 2. For matched trials, we found the effect of valence \(F(1.98, 47.44) = 34.68\), \(\mathit{MSE} = 511.80\), \(p < .001\), \(\hat{\eta}^2_G = .080\). For non-matched trials, there was no significant effect of Valence (\(F(1.78, 42.78) = 0.42\), \(\mathit{MSE} = 234.71\), \(p = .638\), \(\hat{\eta}^2_G = .000\)). Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (mean = 550, SE = 13.8) were responded faster than Neutral-Person (501, SE = 14.7), (\emph{t}(24) = -5.171, \emph{p} = 0.0001) and Bad Person (523, SE = 16.3), \emph{t}(24) = -8.137, \emph{p} \textless{} 0.0001)., and Neutral is faster than Bad-Person condition (\emph{t}(32) = -3.282, \emph{p} = 0.0085).
+
 \newpage
 
 \hypertarget{references}{%
